Fixed issue with how footer displayed on mobile device.

--- a/backend/server/public/styles/main.css
+++ b/backend/server/public/styles/main.css
@@ -1,6 +1,9 @@
 /* W3.CSS 4.12 November 2018 by Jan Egil and Borge Refsnes */
 html {
-    box-sizing: border-box
+    box-sizing: border-box;
+    position: relative;
+    min-height: 100%;
+    margin: 0;
 }
 
 *,
